<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:layout_marginTop="@dimen/y76"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_find_hn_choiceness"
            android:layout_width="0dp"
            android:layout_height="@dimen/y85"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/bg_orange"
            android:text="@string/choiceness"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_find_hn_travel"
            android:layout_width="0dp"
            android:layout_height="@dimen/y85"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/hainan_travel"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_find_hn_cate"
            android:layout_width="0dp"
            android:layout_height="@dimen/y85"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/enjoy_cate"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_find_hn_scenery"
            android:layout_width="0dp"
            android:layout_height="@dimen/y85"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/see_scenery"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_find_hn_relaxation"
            android:layout_width="0dp"
            android:layout_height="@dimen/y85"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/relaxation"
            android:textSize="16sp" />
    </LinearLayout>


</FrameLayout>