<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:layout_marginTop="@dimen/y76"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_ex_trends_zh"
            android:layout_width="0dp"
            android:layout_height="@dimen/y85"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/btn_ex_trend"
            android:text="@string/zhanhui"
            android:textColor="@drawable/btn_ex_trend_text_1"
            android:textSize="16sp" />

        <Button
            android:textColor="@drawable/btn_ex_trend_text_2"
            android:id="@+id/btn_ex_trends_info"
            android:layout_width="0dp"
            android:layout_height="@dimen/y85"
            android:layout_weight="1"
            android:background="@drawable/btn_ex_trend"
            android:text="@string/information"
            android:textSize="16sp" />

        <Button
            android:textColor="@drawable/btn_ex_trend_text_3"
            android:id="@+id/btn_ex_trends_ticket"
            android:layout_width="0dp"
            android:layout_height="@dimen/y85"
            android:layout_weight="1"
            android:background="@drawable/btn_ex_trend"
            android:text="@string/ticket"
            android:textSize="16sp" />

        <Button
            android:textColor="@drawable/btn_ex_trend_text_4"
            android:id="@+id/btn_ex_trends_groupbuy"
            android:layout_width="0dp"
            android:layout_height="@dimen/y85"
            android:layout_weight="1"
            android:background="@drawable/btn_ex_trend"
            android:text="@string/groupbuy"
            android:textSize="16sp" />
    </LinearLayout>


</FrameLayout>