<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/x20">

        <LinearLayout
            android:id="@+id/ll_ex_trends_channel_zh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y20"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/channel_image"
                android:layout_width="@dimen/x60"
                android:layout_height="@dimen/x60"
                android:layout_gravity="center"
                android:src="@drawable/ex_trends_ex" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/y20"
                android:text="@string/zhanhui"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_ex_trends_channel_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y20"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/x60"
                android:layout_height="@dimen/x60"
                android:layout_gravity="center"
                android:src="@drawable/ex_trends_information" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/y20"
                android:text="@string/information"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_ex_trends_channel_ticket"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y20"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/x60"
                android:layout_height="@dimen/x60"
                android:layout_gravity="center"
                android:src="@drawable/ex_trends_ticket" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/y20"
                android:text="@string/ticket"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_ex_trends_channel_gb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y20"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/x60"
                android:layout_height="@dimen/x60"
                android:layout_gravity="center"
                android:src="@drawable/ex_trends_groupbuy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/y20"
                android:text="@string/groupbuy"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y20"
        android:background="@color/colorDivision" />


</LinearLayout>