<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ex.administrator.zhanhui.activity.MainActivity">


    <LinearLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/font_black_5" />


    <LinearLayout
        android:id="@+id/ll_bttom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_ex_home"
            android:layout_width="0dp"
            android:layout_height="@dimen/y100"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_ex_home"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="@dimen/x10"
                android:src="@drawable/tab_selector_home" />

            <TextView
                android:id="@+id/tv_ex_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/home"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_ex_trends"
            android:layout_width="0dp"
            android:layout_height="@dimen/y100"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_ex_trends"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="@dimen/x10"
                android:src="@drawable/tab_selector_trends" />

            <TextView
                android:id="@+id/tv_ex_trends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/exhibition"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_ex_find"
            android:layout_width="0dp"
            android:layout_height="@dimen/y100"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView

                android:id="@+id/iv_ex_find"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="@dimen/x10"
                android:src="@drawable/tab_selector_find" />

            <TextView
                android:id="@+id/tv_ex_find"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hainan"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_ex_my"
            android:layout_width="0dp"
            android:layout_height="@dimen/y100"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_ex_my"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="@dimen/x10"
                android:src="@drawable/tab_selector_my" />

            <TextView
                android:id="@+id/tv_ex_my"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/my"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
